@@ -24,6 +24,8 @@
 #include <ags/object/ags_connectable.h>
 #include <ags/object/ags_soundcard.h>
 
+#include <ags/config.h>
+
 void ags_export_soundcard_class_init(AgsExportSoundcardClass *export_soundcard);
 void ags_export_soundcard_connectable_interface_init(AgsConnectableInterface *connectable);
 void ags_export_soundcard_init(AgsExportSoundcard *export_soundcard);
